# test-rye

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: bump.yml
test_rye/: __init__.py
