[project]
name = "test-rye"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Thomas Kuoch", email = "kuoch.thomas@gmail.com" }
]
dependencies = [
    "fastapi>=0.112.0",
    "pandas>=2.2.2",
    "numpy>=2.0.1",
    "scipy>=1.13.1",
    "psycopg2>=2.9.9",
    "sqlalchemy>=2.0.32",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.7",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.5",
    "commitizen>=3.28.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/test_rye"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
